finish site login

--- a/src/main/resources/templates/site/addPlan.html
+++ b/src/main/resources/templates/site/addPlan.html
@@ -1,3 +1,5 @@
+<!--申请新计划-->
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -31,7 +33,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html" th:href="@{index}">Hotel Status<span
                         class="sr-only">(current)</span></a></li>
-                <li><a href="record.html" th:href="@{record}">Live Records</a></li>
+                <li><a href="buyOffline.html" th:href="@{record}">Live Records</a></li>
                 <li><a href="info.html" th:href="@{info}">Hotel Info</a></li>
                 <li><a href="statistics.html" th:href="@{statistics}">Statistics</a></li>
 
