doing apply plan!

--- a/src/main/resources/templates/payment/pay.html
+++ b/src/main/resources/templates/payment/pay.html
@@ -44,7 +44,7 @@
                 success: function (data) {
                     if (data.result) {
                         alert("付款成功!付款金额: "+data.amount);
-                        location.href = "redirect:/member/index" ;
+                        location.href = "/member/index" ;
                     } else {
                         alert("付款失败!");
                     }
