--- a/src/main/resources/templates/site/register.html
+++ b/src/main/resources/templates/site/register.html
@@ -63,7 +63,7 @@
                 success: function (data) {
                     if (data) {
                         alert(data.result_id);
-                        location.href = "login" ;
+                        location.href = "goLogin" ;
                     } else {
                         alert(data.message);
                     }
