--- a/src/main/resources/templates/site/info.html
+++ b/src/main/resources/templates/site/info.html
@@ -35,17 +35,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../member/index.html" th:href="@{info}">Tickets</a>
+            <a class="navbar-brand" href="info.html" th:href="@{info}">Tickets</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <!--<li><a href="index.html" th:href="@{index}">All Site<span-->
-                        <!--class="sr-only">(current)</span></a></li>-->
                 <li class="active"><a href="info.html" th:href="@{info}">场馆信息</a></li>
 
-                <li><a href="plans.html" th:href="@{plans}">活动一览</a></li>
+                <li><a href="plansShow.html" th:href="@{plansShow}">活动一览</a></li>
 
                 <li><a href="addPlan.html" th:href="@{addPlan}">申请活动</a></li>
 
@@ -105,58 +103,13 @@
             </tr>
         </table>
     </div>
-    <!--<p style="margin-top: 10px"><a href="javascript:" class="btn btn-primary my-pop-1" role="button">Edit Apply</a>-->
-        <!--<a href="#" class="btn btn-info my-pop-2" role="button" >Apply for open</a>-->
-                                    <!--&lt;!&ndash;th:unless="${hotel.status==1}"&ndash;&gt;-->
-    <!--</p>-->
 
-    <!--<p style="margin-top: 10px">-->
-        <!--<button type="button" class="btn btn-info editButton" data-toggle="modal"-->
-                <!--data-target="#editModal">编辑信息-->
-        <!--</button>-->
-    <!--</p>-->
+    <p style="margin-top: 10px"><a href="javascript:" class="btn btn-primary my-pop-1" role="button">申请编辑</a>
+        <a href="#" class="btn btn-info my-pop-2" role="button" >申请上线</a>
+                                    <!--th:unless="${hotel.status==1}"-->
+    </p>
 
 </div>
-
-<!--&lt;!&ndash;Edit按钮弹出内容&ndash;&gt;-->
-<!--<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">-->
-    <!--<div class="modal-dialog" role="document">-->
-        <!--<div class="modal-content">-->
-            <!--<div class="modal-header">-->
-                <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span-->
-                        <!--aria-hidden="true">&times;</span></button>-->
-                <!--<h4 class="modal-title">编辑场馆信息</h4>-->
-            <!--</div>-->
-
-            <!--<form class="form-horizontal" action="info.html" th:action="@{/site/edit}" method="post">-->
-                <!--<div class="modal-body">-->
-                    <!--<div class="form-group">-->
-                        <!--<label for="nameM" class="col-sm-2 control-label">名字</label>-->
-                        <!--<div class="col-sm-10">-->
-                            <!--<input type="text" class="form-control" name="name" id="nameM" placeholder=""/>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="form-group">-->
-                        <!--<label for="add" class="col-sm-2 control-label">地址</label>-->
-                        <!--<div class="col-sm-10">-->
-                            <!--<input type="text" class="form-control" name="add" id="add"-->
-                                   <!--placeholder=""/>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="modal-footer">-->
-                    <!--<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>-->
-                    <!--<button type="button" class="btn btn-primary edit">保存</button>-->
-                <!--</div>-->
-            <!--</form>-->
-
-
-            <!--<div class="err-msg"></div>-->
-        <!--</div>-->
-
-    <!--</div>-->
-
-<!--</div>-->
 
 <div class="cd-user-modal cd-user-modal-1">
     <div class="cd-user-modal-container">
@@ -164,41 +117,43 @@
 
         <div class="panel panel-info">
             <!-- Default panel contents -->
-            <div class="panel-heading">Site Message Change Apply</div>
-            <form class="form-horizontal" action="info.html" th:action="@{/hotel/edit}" method="post">
+            <div class="panel-heading">场馆信息 修改申请</div>
+            <form class="form-horizontal" action="info.html" th:action="@{/site/edit}" method="post">
                 <div class="form-group">
-                    <label for="name" class="col-sm-2 control-label">Name</label>
+                    <label for="name" class="col-sm-2 control-label">新名称</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="name" id="name" placeholder="Hotel Name" required="required" />
+                        <input type="text" class="form-control" name="name" id="name" placeholder=" " required="required" />
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="address" class="col-sm-2 control-label">Address</label>
+                    <label for="address" class="col-sm-2 control-label">新地址</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="address" id="address" placeholder="Address" required="required" />
+                        <input type="text" class="form-control" name="address" id="address" placeholder=" " required="required" />
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="description" class="col-sm-2 control-label">Description</label>
+                    <label for="address" class="col-sm-2 control-label">豪华座数</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="description" id="description" placeholder="Description" required="required" />
+                        <input type="number" class="form-control" name="num_a" id="num_a" placeholder=" " required="required" />
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10   col-md-4">
-                        <input id="fileupload" type="file" name="file" data-url="../upload"  />
-                        <p id="fileName"></p>
-                        <div id="progress">
-                            <div class="bar" style="width: 0;"></div>
-                        </div>
+                    <label for="address" class="col-sm-2 control-label">高级座数</label>
+                    <div class="col-sm-10">
+                        <input type="number" class="form-control" name="num_b" id="num_b" placeholder=" " required="required" />
                     </div>
-
+                </div>
+                <div class="form-group">
+                    <label for="address" class="col-sm-2 control-label">普通座数</label>
+                    <div class="col-sm-10">
+                        <input type="number" class="form-control" name="num_c" id="num_c" placeholder=" " required="required" />
+                    </div>
                 </div>
                 <input type="hidden" id="picUrl"  name="url" value="" />
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10   col-md-4">
-                        <button type="submit" class=" btn btn-primary">Apply</button>
-                        <a href="#" class="btn btn-danger modal-cancel">Cancel</a>
+                        <button type="submit" class=" btn btn-primary">提交申请</button>
+                        <a href="#" class="btn btn-danger modal-cancel">取消</a>
 
                     </div>
 
@@ -218,18 +173,18 @@
 
         <div class="panel panel-info">
             <!-- Default panel contents -->
-            <div class="panel-heading">Hotel Open Application</div>
-            <form class="form-horizontal" action="info.html" th:action="@{/hotel/open}" method="post">
+            <div class="panel-heading">场馆上线申请</div>
+            <form class="form-horizontal" action="info.html" th:action="@{/site/open}" method="post">
                 <div class="form-group">
-                    <label for="reason" class="col-sm-2 control-label">Reason</label>
+                    <label for="reason" class="col-sm-2 control-label">阐述</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="reason" id="reason" placeholder="Your Reason" />
+                        <input type="text" class="form-control" name="reason" id="reason" placeholder=" " />
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10   col-md-4">
-                        <button type="submit" class=" btn btn-primary">Apply</button>
-                        <a href="#" class="btn btn-danger modal-cancel">Cancel</a>
+                        <button type="submit" class=" btn btn-primary">提交申请</button>
+                        <a href="#" class="btn btn-danger modal-cancel">取消</a>
 
                     </div>
 
@@ -242,7 +197,6 @@
 </div>
 
 
-Scripts
 
 <script src="../../static/js/jquery-3.1.1.min.js" th:src="@{/js/jquery-3.1.1.min.js}"></script>
 <script src="../../static/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
@@ -253,38 +207,15 @@ Scripts
 <script src="../../static/js/jquery.fileupload.js" th:src="@{/js/jquery.fileupload.js}"></script>
 
 <script th:inline="javascript">
-    var filePath ='' ;
-
-    $(function () {
-        $('#fileupload').fileupload({
-            dataType: 'json',
-            done: function (e, data) {
-                $('#fileupload').text(data.result.name);
-                filePath = data.result.path;
-                document.getElementById('picUrl').value = filePath;
-                console.log('pic url ' + document.getElementById('picUrl').value);
-            },
-
-            progressall: function (e, data) {
-                var progress = parseInt(data.loaded / data.total * 100, 10);
-                $('#progress').find('.bar').css(
-                    'width',
-                    progress + '%'
-                );
-            }
-
-        });
-    });
-
     $(document).ready(function(){
-        var edit =/*[[${edit}]]*/ 'false';
+        var edit =[[${edit}]];
         console.log('edit' +edit);
         if (edit === true) {
             var $editPop = $('.my-pop-1');
             $editPop.attr("disabled" , 'disabled');
             $editPop.text('Edit Waiting For Approval');
         }
-        var open= /*[[${open}]]*/ 'false';
+        var open= [[${open}]];
         console.log('open' + open);
         if (open === true) {
             var $openPop = $('.my-pop-2');
